--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,15 @@ nav {
     gap: 2rem;
 }
 
+.header__container_gg{
+  max-width: var(--max-width);
+  margin-inline: auto;
+  padding-block: 6.5rem 2rem;
+  padding-inline: 1rem;
+  display: grid;
+  gap: 2rem;
+}
+
 .header__image img{
     width: 100%;
     max-width: 500px;
@@ -151,7 +160,16 @@ nav {
     margin-bottom: 1.5rem;
     margin-top: 2rem;
     color: var(--negro);
-} 
+}
+
+.header__content img{
+  width: 100%;
+  max-width: 400px;
+  margin-inline: auto;
+  display: flex;
+  border-radius: 1%;
+  padding-bottom: 25px;
+}
 
 .socials{
     padding-block: 2rem 4rem;
